<resources>
    <string name="app_name">Radar</string>
    <string name="radar_description">Система мониторинга состояния грузовиков в режиме реального времени</string>
    <string name="radar">Радар</string>
    <string name="kamaz">Камаз</string>
    <string name="some_id">Подкатегория</string>
    <string name="wifi">WiFi</string>
    <string name="connect_to_the_device">Подключитесь к устройству</string>
    <string name="continue_text">Продолжить</string>
    <string name="connect">Подключиться</string>
    <string name="available">Доступно</string>
    <string name="network">Сеть</string>
    <string name="connected">Подключено</string>
    <string name="status">Статус</string>
    <string name="logo">Логотип</string>
    <string name="menu">Меню</string>
    <string name="condition">Состояние</string>
    <string name="maintenance_service">ТО</string>
    <string name="report">Отчёт</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="node_status_archive">Архив СУ</string>
    <string name="maintenance_archive">Архив ТО</string>
    <string name="select_dates">Выберите даты</string>
    <string name="date_range_format">%1$s - %2$s</string>
    <string name="node">Узел</string>
    <string name="admin">Панель админа</string>
</resources>